# membranes

./: .gitignore  CONTRIBUTING.md  README.md  TODO.md  pyproject.toml  social-preview-concept.md
patterns/: injection_patterns.yaml
src/membranes/: __init__.py  cli.py  injection_patterns.yaml  sanitizer.py  scanner.py
src/membranes.egg-info/: PKG-INFO  SOURCES.txt  entry_points.txt  requires.txt
tests/: stress_test_patterns.py  test_all_patterns.py  test_patterns.py  test_scanner.py  validate_patterns.py
